# contentmap

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  semantic-release.yaml
contentmap/: __init__.py  core.py  sitemap.py  test.py  vss.py
tests/: conftest.py  fixture.db  test_creator.py  test_fts.py  test_sitemap.py  test_vss.py  utils.py
tests/fixtures/sitemap_folder_a/: sitemap_a.xml
tests/fixtures/sitemap_folder_b/: sitemap_b.xml
